syntax = "proto3";

package market_data;

import "trade_unit.proto";

message CryptoQuotationProto {
    string symbol = 1;
    market_data.CryptoTradeUnitProto bid = 2;
    market_data.CryptoTradeUnitProto ask = 3;
}
